testsuite/escript/func/var-args-err-last-param.src
function sum( args ..., arg0 )
  return $"sum of {args}";
endfunction

sum();
